--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             </div>
         </section>
     </main>
-    <div class="ADverties">
+<!--     <div class="ADverties">
         <div class="ASTON">
             <img src="astonlogo.png">
             <p>Aston Ceramic(parking tiles)<br>
@@ -163,7 +163,7 @@
                 <p>site 2:-ravaper-kenal road <br> <a href="https://drive.google.com/file/d/1rtPglQQrXsSQQ9qyiPW-853sZ8s0R7zH/view?usp=sharing" title="click to view map">SKY LAND-2</a></p>
                 <p>site 3:-panchasar nani kenal road<br><a href="https://drive.google.com/file/d/1rqwl5McIVOvvSJDnuv62QK6NiK0EziLL/view?usp=sharing" title="click to view map">SKY VIEW</a></p>
         </div>
-    </div>
+    </div> -->
     <footer>
         <div>
         <span>desined by Keyur Jivani</span>
